# hermes-harvest-plugin-template

./: .flake8  .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: create_issue.yml
src/hermes_plugin_your_source/: harvest.py
src/your_plugin/: harvest.py
