[project]
name = "your_plugin"
version = "0.1.0"
description = "HERMES plugin for your_source"
readme = "README.md"
keywords = [ "publishing", "metadata", "automation"]
requires-python = ">= 3.10"
classifiers = [ "Development Status :: 1 - Planning", "Environment :: Plugins", "Programming Language :: Python :: 3" ]
dependencies = [ "hermes>=0.9.0" ]

authors = [
    { name = "You", email = "you@email.com" }
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
