[project]
name = "hermes_plugin_<your_source>"  # TODO: Replace placeholder
version = "0.1.0"
description = "HERMES harvesting plugin for <your_source>"  # TODO: Replace placeholder
readme = "README.md"
keywords = [ "publishing", "metadata", "automation"]
requires-python = ">= 3.10"
classifiers = [ "Development Status :: 1 - Planning", "Environment :: Plugins", "Programming Language :: Python :: 3" ]
dependencies = [ "hermes>=0.9.0" ]

authors = [
    { name = "You", email = "you@email.com" }  # TODO: Replace placeholder
]

[project.entry-points."hermes.harvest"]
<your_source> = "hermes_plugin_<your_source>.harvest:YourHarvestPlugin"  # TODO: Replace placeholder

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
